methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: not found: type Bolean
def haveBaggle():Boolean = {var vuBiscuit:Bolean = false
                                          ^MethodsReturning:6: error: return outside method definition
for (i <- 1 to 6) {if (haveBaggle()) {return}; droite(); avance(); gauche(); } 
                                      ^