methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var vuBiscuit:Bolean = false
                            var p:Int = 1
                                        while (p!=6) {if (estSurBiscuit()) {vuBiscuit=true}; avance(); p=p+1;}
                                       recule();recule();recule();recule();recule();recule();return vuBiscuit}

for (i <- 1 to 6) {if (haveBaggle()) {return}; droite(); avance(); gauche(); }